--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spotify-react",
-  "homepage": "https://blackbirdtech.ca/spotify-react/",
-  "version": "0.1.0",
+  "homepage": "http://Mikebezeau.github.io/spotify-react",
+  "version": "0.1.0", 
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
@@ -22,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -41,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
